--- a/football_league/templates/main/home.html
+++ b/football_league/templates/main/home.html
@@ -1,1 +1,115 @@
-aasdsad
+{% extends "main/base.html" %}
+{% block title %} Tabela drużyn {% endblock %}
+
+{%block content %}
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-text">
+                    <span class="name">Tabela</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<section id="teamsTable">
+    <div class="container">
+      <table class="table table-hover table-bordered">
+        <thead>
+          <tr>
+            <th>lp.</th>
+            <th>Drużyna</th>
+            <th>Rozegrane mecze</th>
+            <th>Punkty</th>
+            <th>Wygrane</th>
+            <th>Remisy</th>
+            <th>Porażki</th>
+            <th>Bramki zdobyte</th>
+            <th>Bramki stracone</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Slask wroclaw</td>
+            <td>10</td>
+            <td>26</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>4</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+</section>
+
+{% endblock %}
