--- a/football_league/templates/main/calendar.html
+++ b/football_league/templates/main/calendar.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %} Tabela drużyn {% endblock %}
+{% block title %} Terminarz {% endblock %}
 
 {%block content %}
 <header>
