--- a/football_league/templates/main/base.html
+++ b/football_league/templates/main/base.html
@@ -61,7 +61,7 @@
                         <a href="/calendar">Terminarz</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#">Edycja tabel</a>
+                        <a href="/tables_management">Edycja tabel</a>
                     </li>
                 </ul>
             </div>
