edycja i usuwanie klubow

--- a/football_league/static/css/style.css
+++ b/football_league/static/css/style.css
@@ -38,3 +38,17 @@ table, table > thead, table > thead > tr, table > thead > tr > th, table > tbody
   padding: 1px 6px;
   border-width: 0;
 }
+
+form > p > label {
+    color: white;
+}
+
+#form{
+    top: 200px;
+    position: relative;
+    left: 40%;
+}
+
+ul.errorlist {
+    color: red;
+}
