--- a/football_league/templates/main/tables_management_clubs_edit.html
+++ b/football_league/templates/main/tables_management_clubs_edit.html
@@ -3,7 +3,7 @@
 
 {%block content %}
     <section id="form">
-        <form action="/tables_management_clubs_add" method="post">
+        <form action="" method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Submit" />
