wyswietlanie tabeli z meczami

--- a/football_league/templates/main/base.html
+++ b/football_league/templates/main/base.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Polska liga piłkarska</a>
+                <a class="navbar-brand" href="/table">Polska liga piłkarska</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
