--- a/football_league/templates/main/tables_management.html
+++ b/football_league/templates/main/tables_management.html
@@ -29,6 +29,11 @@
             <td>KLUBY</td>
             <td><a href="/tables_management_clubs" class="btn btn-info">Wykonaj akcję na tej tabeli</a></td>
           </tr>
+          <tr>
+            <td>2</td>
+            <td>MECZE</td>
+            <td><a href="/tables_management_games" class="btn btn-info">Wykonaj akcję na tej tabeli</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
