--- a/football_league/templates/main/tables_management_clubs.html
+++ b/football_league/templates/main/tables_management_clubs.html
@@ -46,6 +46,7 @@
       </table>
       <a href="/tables_management_clubs_add" class="btn btn-warning">Dodaj drużynę</a>
     </div>
+    <a class="btn btn-primary back" href="/tables_management">Powróć do poprzedniej strony</a>
 </section>
 
 {% endblock %}
