--- a/football_league/templates/main/tables_management_clubs_add.html
+++ b/football_league/templates/main/tables_management_clubs_add.html
@@ -2,11 +2,12 @@
 {% block title %} Tabela drużyn {% endblock %}
 
 {%block content %}
-    <section id="form">
-        <form action="/tables_management_clubs_add" method="post">
+    <section>
+        <form action="/tables_management_clubs_add" method="post" id="form">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Submit" />
         </form>
+        <a class="btn btn-primary back" href="/tables_management_clubs">Powróć do poprzedniej strony</a>
     </section>
 {% endblock %}
