tabela mecze i uczestniczy

--- a/football_league/templates/main/tables_management.html
+++ b/football_league/templates/main/tables_management.html
@@ -34,6 +34,11 @@
             <td>MECZE</td>
             <td><a href="/tables_management_games" class="btn btn-info">Wykonaj akcję na tej tabeli</a></td>
           </tr>
+        <tr>
+            <td>3</td>
+            <td>UCZESTNICY MECZU</td>
+            <td><a href="/tables_management_members" class="btn btn-info">Wykonaj akcję na tej tabeli</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
