--- a/football_league/templates/main/base.html
+++ b/football_league/templates/main/base.html
@@ -70,7 +70,7 @@
         <!-- /.container-fluid -->
     </nav>
     <div class = "background"></div>
-    <div style = "background-color: black;position:fixed;top:0;left:0;right:0;bottom:0;opacity:0.8">
+    <div style = "background-color: black;position:absolute;top:0;left:0;right:0;bottom:0;opacity:0.8">
       {% block content %}
       {% endblock %}
     </div>
