--- a/football_league/templates/main/tables_management_members.html
+++ b/football_league/templates/main/tables_management_members.html
@@ -15,6 +15,10 @@
 </header>
 <section id="teamsTable">
     <div class="container">
+        <form type="get" action="/tables_management_members" style="margin-bottom:15px">
+            <input  id="search_box" type="text" name="search_box"  placeholder="Search by surname" >
+            <button id="search_submit" type="submit" >Submit</button>
+        </form>
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
