--- a/football_league/templates/main/tables_management_members.html
+++ b/football_league/templates/main/tables_management_members.html
@@ -16,7 +16,7 @@
 <section id="teamsTable">
     <div class="container">
         <form type="get" action="/tables_management_members" style="margin-bottom:15px">
-            <input  id="search_box" type="text" name="search_box"  placeholder="Search by surname" >
+            <input  id="search_box" type="text" name="search_box"  placeholder="Search by name or surname" >
             <button id="search_submit" type="submit" >Submit</button>
         </form>
       <table class="table table-hover table-bordered">
