--- a/football_league/templates/main/tables_management_games_edit.html
+++ b/football_league/templates/main/tables_management_games_edit.html
@@ -9,7 +9,7 @@
             <input type="submit" value="Submit" />
         </form>
         {% if error %}
-            <p>{{ error }}</p>
+            <p class="error">{{ error }}</p>
         {% endif %}
         <a class="btn btn-primary back" href="/tables_management_games">Powróć do poprzedniej strony</a>
     </section>
