--- a/football_league/templates/main/calendar_details.html
+++ b/football_league/templates/main/calendar_details.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %} Terminarz {% endblock %}
+{% block title %} Zawodnicy w meczu {% endblock %}
 
 {%block content %}
 <header>
