--- a/football_league/templates/main/tables_management_games.html
+++ b/football_league/templates/main/tables_management_games.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %} Tabela drużyn {% endblock %}
+{% block title %} Zarządzanie meczami {% endblock %}
 
 {%block content %}
 <header>
