--- a/football_league/templates/main/tables_management_clubs_add.html
+++ b/football_league/templates/main/tables_management_clubs_add.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %} Tabela drużyn {% endblock %}
+{% block title %} Dodaj klub {% endblock %}
 
 {%block content %}
     <section>
