--- a/football_league/templates/main/tables_management_members.html
+++ b/football_league/templates/main/tables_management_members.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %} Tabela drużyn {% endblock %}
+{% block title %} Zarządzanie uczestnikami {% endblock %}
 
 {%block content %}
 <header>
