stronicowanie + usuniecie zczytywania wszytskich obiektow tam gdzien nie jets to potrzsebne

--- a/football_league/templates/main/tables_management_members_edit.html
+++ b/football_league/templates/main/tables_management_members_edit.html
@@ -4,6 +4,7 @@
 {%block content %}
     <section>
         <form action="" method="post" id="form">
+            <input type="text" disabled value = "{{member.member.name}} {{member.member.surname}}">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Submit" />
