--- a/football_league/templates/main/tables_management_members.html
+++ b/football_league/templates/main/tables_management_members.html
@@ -16,7 +16,7 @@
 <section id="teamsTable">
     <div class="container">
         <form type="get" action="/tables_management_members" style="margin-bottom:15px">
-            <input  id="search_box" type="text" name="search_box"  placeholder="Search by name or surname" >
+            <input  id="search_box" type="text" name="search_box"  placeholder="Search by name or surname" value = "{{search_query}}">
             <button id="search_submit" type="submit" >Submit</button>
         </form>
       <table class="table table-hover table-bordered">
@@ -59,6 +59,21 @@
         </tbody>
       </table>
       <a href="/tables_management_members_add" class="btn btn-warning">Dodaj uczestnika</a>
+        <div class="pagination" style="float:right">
+            <span class="step-links">
+                {% if members.has_previous %}
+                    <a href="?page={{ members.previous_page_number }}">poprzednia</a>
+                {% endif %}
+
+                <span class="current" style="color:white">
+                    Strona {{ members.number }} z {{ members.paginator.num_pages }}.
+                </span>
+
+                {% if members.has_next %}
+                    <a href="?page={{ members.next_page_number }}">następna</a>
+                {% endif %}
+            </span>
+        </div>
     </div>
     <a class="btn btn-primary back" href="/tables_management">Powróć do poprzedniej strony</a>
 </section>
