--- a/football_league/templates/main/base.html
+++ b/football_league/templates/main/base.html
@@ -30,6 +30,12 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- jQuery -->
+    <script src="{% static 'js/jquery.js' %}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {{ form.media }}
 </head>
 
 <body id="page-top" class="index">
@@ -74,11 +80,7 @@
       {% block content %}
       {% endblock %}
     </div>
-    <!-- jQuery -->
-    <script src="{% static 'js/jquery.js' %}"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
