--- a/football_league/templates/main/tables_management_clubs_add.html
+++ b/football_league/templates/main/tables_management_clubs_add.html
@@ -6,7 +6,7 @@
         <form action="/tables_management_clubs_add" method="post" id="form">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Submit" />
+            <input type="submit" value="Zatwierdz" />
         </form>
         <a class="btn btn-primary back" href="/tables_management_clubs">Powróć do poprzedniej strony</a>
     </section>
